correctif dashboard